--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,5 @@
-<h2 id="title">Welcome to Ember</h2>
-
-{{outlet}}
+<center>
+  <h2 id="title">Twitter Sample Application</h2>
+  {{outlet}}
+  <h4 class="footer">Created by Steven Scaffidi</h4>
+</center>
